--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,12 +7,11 @@
   <meta name="Generator" content="Cocoa HTML Writer">
   <meta name="CocoaVersion" content="2022.6">
   <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; color: #000000; -webkit-text-stroke: #ffffff}
     span.s1 {font-kerning: none}
-    span.s2 {text-decoration: underline ; font-kerning: none; color: #0000dc; -webkit-text-stroke: 0px #0000dc}
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">© {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com/"><span class="s2">Jekyll</span></a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/"><span class="s2">Minimal Mistakes</span></a>.</span></p>
+<p class="p1"><span class="s1">&lt;div class="page__footer-copyright"&gt;&amp;copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} &lt;a href="http://jekyllrb.com" rel="nofollow"&gt;Jekyll&lt;/a&gt; &amp;amp; &lt;a href="https://github.com/academicpages/academicpages.github.io"&gt;AcademicPages&lt;/a&gt;, a fork of &lt;a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow"&gt;Minimal Mistakes&lt;/a&gt;.&lt;/div&gt;</span></p>
 </body>
 </html>
