--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
-    span.s2 {text-decoration: underline ; font-kerning: none; color: #0000d3; -webkit-text-stroke: 0px #0000d3}
+    span.s2 {text-decoration: underline ; font-kerning: none; color: #0000c9; -webkit-text-stroke: 0px #0000c9}
   </style>
 </head>
 <body>
